--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h2 {
     font-size: 30px;
     text-align: center;
     padding: 20px 20px;
-    color: #9F2B68;
+    color: #FF7F50;
 
 }
 
@@ -18,7 +18,7 @@ h1 {
     text-align: center;
     margin: 0;
     padding: 20px 20px;
-    color: #9F2B68;
+    color: #FF7F50;
     text-shadow: 3px 3px 1px rgb(249, 245, 248);
 }
 
@@ -39,7 +39,7 @@ p {
 body {
     width: 800px;
     margin: 0 auto;
-    background-color: #ebf1eb;
+    background-color: #FF7F50;
     padding: 0 20px 20px 20px;
 }
 
