--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ p {
 body {
     width: 800px;
     margin: 0 auto;
-    background-color: #FF7F50;
+    background-color: #FFFFFF;
     padding: 0 20px 20px 20px;
 }
 
